samples/_failures_safe/1761409245_1e7bc6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b8e18976.c: In function ‘main’:
./samples/SAFE/__tmp_b8e18976.c:158:9: error: expected declaration or statement at end of input
  158 |         printf("Graph is acyclic\n");
      |         ^~~~~~
./samples/SAFE/__tmp_b8e18976.c:158:9: error: expected declaration or statement at end of input
